--- a/NoDecentDiary/Resources/Raw/i18n/zh-CN.json
+++ b/NoDecentDiary/Resources/Raw/i18n/zh-CN.json
@@ -163,5 +163,9 @@
     "EditSign": "修改签名",
     "SignPlace": "请输入签名",
     "NoCapture": "您的设备不支持拍照"
+  },
+  "Permission": {
+    "OpenCamera": "请开启相机权限",
+    "OpenStorageWrite": "请开启存储写入权限"
   }
 }
