--- a/NoDecentDiary/Resources/Raw/i18n/en-US.json
+++ b/NoDecentDiary/Resources/Raw/i18n/en-US.json
@@ -166,5 +166,13 @@
   "Permission": {
     "OpenCamera": "Please enable camera permissions",
     "OpenStorageWrite": "Please enable storage write permission"
+  },
+  "About": {
+    "SourceCode": "View Source Code",
+    "UserAgreement": "User Agreement",
+    "PrivacyPolicy": "Privacy Policy",
+    "UpdateLog": "Update Log",
+    "Evaluation": "App Evaluation",
+    "Related": "Related Open Source Project"
   }
 }
