--- a/NoDecentDiary/Resources/Raw/i18n/zh-CN.json
+++ b/NoDecentDiary/Resources/Raw/i18n/zh-CN.json
@@ -175,5 +175,9 @@
     "UpdateLog": "更新日志",
     "Evaluation": "应用评价",
     "Related": "开源相关"
+  },
+  "FilePath": {
+    "UserAgreement": "wwwroot/docs/user-agreement/zh-CN.md",
+    "PrivacyPolicy": "wwwroot/docs/privacy-policy/zh-CN.md"
   }
 }
