feat(DiaryCard): update display of untitled

--- a/NoDecentDiary/wwwroot/i18n/en-US.json
+++ b/NoDecentDiary/wwwroot/i18n/en-US.json
@@ -188,6 +188,6 @@
     "CurrencySymbol": "$",
     "Thank": "Thank",
     "ThankContent": "Thank you, my friend, for your kindness. Don't really donate it to me.",
-    "ThankContent2": "I hope you can record your wonderful life every day, and you can see it when you are old. This is my original intention of making this software"
+    "ThankContent2": "I hope you can live a full life every day and record your wonderful life. I can see it when I am old. That is the original intention of making this software."
   }
 }
