--- a/NoDecentDiary/wwwroot/i18n/zh-CN.json
+++ b/NoDecentDiary/wwwroot/i18n/zh-CN.json
@@ -61,7 +61,7 @@
     "Top": "置顶",
     "CancelTop": "取消置顶",
     "Export": "导出",
-    "Untitled": "无标题",
+    "Untitled": "无题",
     "NoDiary": "暂无日记",
     "Delete": {
       "Title": "删除日记",
@@ -189,6 +189,6 @@
     "CurrencySymbol": "￥",
     "Thank": "感谢",
     "ThankContent": "谢谢你朋友，你的好意我心领了，不必真的捐赠给我。",
-    "ThankContent2": "希望你每天能记录下自己精彩的生活，当老的一天还能看到，这就是我制作这款软件的初衷。"
+    "ThankContent2": "希望你每天能过得充实，并且记录下自己精彩的生活，当老的一天还能看到，这就是我制作这款软件的初衷。"
   }
 }
