--- a/NoDecentDiary/wwwroot/i18n/zh-CN.json
+++ b/NoDecentDiary/wwwroot/i18n/zh-CN.json
@@ -72,8 +72,8 @@
     "Placeholder": "请输入日记关键词"
   },
   "History": {
-    "Calendar": "日历模式",
-    "Catalogue": "目录模式"
+    "Calendar": "日历",
+    "Catalogue": "目录"
   },
   "Write": {
     "OpenTitle": "打开标题",
