feat(ErrorHandle): update error handle

--- a/NoDecentDiary/wwwroot/i18n/en-US.json
+++ b/NoDecentDiary/wwwroot/i18n/en-US.json
@@ -192,5 +192,9 @@
     "ThankContent": "Thank you, my friend, for your kindness. Don't really donate it to me.",
     "ThankContent2": "I hope you can live a full life every day and record your wonderful life. I can see it when I am old. That is the original intention of making this software."
   },
-  "FunctionalDescription": "Functional Description"
+  "FunctionalDescription": "Functional Description",
+  "ErrorHandle": {
+    "Title": "Error",
+    "Content": "An exception occurred. It has been saved to the log. Please exit the application"
+  }
 }
