--- a/NoDecentDiary/wwwroot/i18n/zh-CN.json
+++ b/NoDecentDiary/wwwroot/i18n/zh-CN.json
@@ -193,5 +193,9 @@
     "ThankContent": "谢谢你朋友，你的好意我心领了，不必真的捐赠给我。",
     "ThankContent2": "希望你每天能过得充实，并且记录下自己精彩的生活，当老的一天还能看到，这就是我制作这款软件的初衷。"
   },
-  "FunctionalDescription": "功能说明"
+  "FunctionalDescription": "功能说明",
+  "ErrorHandle": {
+    "Title": "错误",
+    "Content": "出现异常，已保存到日志，请退出应用"
+  }
 }
