🆕feat(StatisticsPage): complete StatisticsPage

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -199,6 +199,7 @@
   },
   "Achievement": {
     "AchieveAchievements": "Achieve Achievements",
+    "Completed": "Completed",
     "Diary": {
       "1": {
         "Name": "Memory start",
