--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -200,6 +200,7 @@
   },
   "Achievement": {
     "AchieveAchievements": "达成成就",
+    "Completed": "已完成",
     "Diary": {
       "1": {
         "Name": "记忆开始",
