🆕feat(SettingPage): Add SettingPage

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -274,5 +274,18 @@
         "Description": "First export"
       }
     }
+  },
+  "Setting": {
+    "Diary": {
+      "Name": "Diary",
+      "Title": "Title",
+      "Markdown": "Markdown"
+    },
+    "Safe": {
+      "Name": "Safe",
+      "DisplayPrivacy": "Display Privacy",
+      "PrivacyLibrary": "Privacy Library",
+      "Mask": "Invalidate Data"
+    }
   }
 }
