--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -293,12 +293,13 @@
       "PrivatePasswordSetSuccess": "PrivatePassword set success",
       "SetPassword": "Set Password",
       "ValidatePassword": "Validate Password",
-      "Placeholder": "Please input a password",
       "PasswordError": "Password Error"
     }
   },
   "Password must be at most 20 characters long": "Password must be at most 20 characters long",
   "Password must be at least 6 characters long": "Password must be at least 6 characters long",
   "The two passwords are inconsistent": "The two passwords are inconsistent",
-  "Experimental features": "Warn! Experimental features"
+  "Experimental features": "Warn! Experimental features",
+  "Please input a password": "Please input a password",
+  "Please enter the password again": "Please enter the password again"
 }
