--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -46,7 +46,7 @@
       "Content": "仅删除标签，不会删除标签下的日记"
     },
     "Rename": "重命名标签",
-    "NoTag": "暂无日记"
+    "NoTag": "暂无标签"
   },
   "Week": {
     "0": "星期日",
